[gd_scene load_steps=7 format=3 uid="uid://cyxybo01c0g38"]

[ext_resource type="Theme" uid="uid://rkt0rb637w0g" path="res://assets/main_theme.tres" id="1_grhmc"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_hkecu"]
[ext_resource type="Texture2D" uid="uid://p3bcappiimfx" path="res://assets/Logo Game.png" id="3_bj0kf"]
[ext_resource type="FontFile" uid="uid://binnamcsbaeja" path="res://assets/fonts/Abaddon_Bold.ttf" id="3_vhlfg"]
[ext_resource type="AudioStream" uid="uid://4hpqlbpoy3y" path="res://assets/menu_music.mp3" id="5_ue5kv"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yauum"]
b = Vector2(1080, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_grhmc")
script = ExtResource("1_hkecu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.960784, 0.960784, 1)
metadata/_edit_use_anchors_ = true

[node name="Background" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="Background"]
position = Vector2(0, 1080)

[node name="CollisionShape" type="CollisionShape2D" parent="Background/Ground"]
shape = SubResource("SegmentShape2D_yauum")

[node name="AddPieceTimer" type="Timer" parent="Background"]
wait_time = 0.1
autostart = true

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -400.0
offset_right = 260.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainVBox"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
texture = ExtResource("3_bj0kf")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("3_vhlfg")
theme_override_font_sizes/font_size = 128
text = "UNP Chess"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonVBox" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="MainVBox/ButtonVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start Game"

[node name="CreditsButton" type="Button" parent="MainVBox/ButtonVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"

[node name="Exit" type="Button" parent="MainVBox/ButtonVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ue5kv")
autoplay = true

[connection signal="timeout" from="Background/AddPieceTimer" to="." method="add_falling_piece"]
[connection signal="pressed" from="MainVBox/ButtonVBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainVBox/ButtonVBox/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainVBox/ButtonVBox/Exit" to="." method="_on_exit_pressed"]
